--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "hookedin-lib": "git+https://github.com/madeken/hookedin-lib.git",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.15",
     "gatsby-plugin-manifest": "^2.0.5",
