--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "gatsby": "^2.0.50",
     "gatsby-image": "^2.0.15",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.11",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sass": "^2.0.4",
     "gatsby-plugin-sharp": "^2.0.7",
     "gatsby-source-filesystem": "^2.0.4",
     "gatsby-transformer-sharp": "^2.1.4",
     "hookedin-lib": "git+https://github.com/madeken/hookedin-lib.git",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0"
+    "node-sass": "^4.10.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-helmet": "^5.2.0",
+    "reactstrap": "^6.5.0"
   }
 }
