--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
+    "react-scrollspy": "^3.3.5",
     "reactstrap": "^6.5.0"
   }
 }
