--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "gatsby": "^2.0.50",
-    "gatsby-image": "^2.0.15",
-    "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-offline": "^2.0.11",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sass": "^2.0.4",
-    "gatsby-plugin-sharp": "^2.0.7",
-    "gatsby-source-filesystem": "^2.0.4",
-    "gatsby-transformer-sharp": "^2.1.4",
+    "bootstrap": "^4.2.1",
+    "gatsby": "^2.0.90",
+    "gatsby-cli": "^2.4.8",
+    "gatsby-image": "^2.0.25",
+    "gatsby-plugin-manifest": "^2.0.13",
+    "gatsby-plugin-offline": "^2.0.21",
+    "gatsby-plugin-react-helmet": "^3.0.5",
+    "gatsby-plugin-sass": "^2.0.7",
+    "gatsby-plugin-sharp": "^2.0.17",
+    "gatsby-source-filesystem": "^2.0.13",
+    "gatsby-transformer-sharp": "^2.1.10",
     "hookedin-lib": "git+https://github.com/madeken/hookedin-lib.git",
-    "node-sass": "^4.10.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "node-sass": "^4.11.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-scrollspy": "^3.3.5",
     "reactstrap": "^6.5.0"
