Work on transaction page

--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.1.2",
-    "gatsby-cli": "^2.4.10",
+    "gatsby-cli": "^2.4.11",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-offline": "^2.0.23",
@@ -20,8 +23,10 @@
     "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-source-filesystem": "^2.0.20",
     "gatsby-transformer-sharp": "^2.1.13",
-    "hookedin-lib": "git+https://github.com/madeken/hookedin-lib.git",
+    "hookedin-lib": "git+https://github.com/hookedin/hookedin-lib.git",
+    "i": "^0.3.6",
     "node-sass": "^4.11.0",
+    "npm": "^6.8.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-helmet": "^5.2.0",
