--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "react-helmet": "^5.2.0",
     "react-scrollspy": "^3.3.5",
     "reactstrap": "^7.1.0"
+  },
+  "devDependencies": {
+    "@types/reactstrap": "^7.1.3"
   }
 }
