--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
-    "gatsby": "^2.3.15",
-    "gatsby-cli": "^2.5.5",
-    "gatsby-image": "^2.0.37",
-    "gatsby-plugin-manifest": "^2.0.27",
+    "gatsby": "^2.3.23",
+    "gatsby-cli": "^2.5.8",
+    "gatsby-image": "^2.0.39",
+    "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-sharp": "^2.0.33",
+    "gatsby-plugin-sharp": "^2.0.34",
     "gatsby-plugin-typescript": "^2.0.12",
     "gatsby-source-filesystem": "^2.0.29",
-    "gatsby-transformer-sharp": "^2.1.17",
+    "gatsby-transformer-sharp": "^2.1.18",
     "hookedin-lib": "git+https://github.com/hookedin/hookedin-lib.git",
     "node-sass": "^4.11.0",
     "npm": "^6.9.0",
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.8.13",
-    "@types/reactstrap": "^7.1.3"
+    "@types/reactstrap": "^8.0.0",
+    "typescript": "^3.4.3"
   }
 }
