--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hookedin-web",
-  "description": "Webpage for Hookedin",
+  "name": "moneypot-web",
+  "description": "Webpage for moneypot",
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
@@ -9,33 +9,33 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.24",
+    "@fortawesome/free-solid-svg-icons": "^5.11.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
-    "gatsby": "^2.3.30",
-    "gatsby-cli": "^2.5.12",
-    "gatsby-image": "^2.0.40",
+    "gatsby": "^2.15.19",
+    "gatsby-cli": "^2.7.49",
+    "gatsby-image": "^2.2.20",
     "gatsby-plugin-manifest": "^2.0.29",
-    "gatsby-plugin-offline": "^2.0.25",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-offline": "^2.2.10",
+    "gatsby-plugin-react-helmet": "^3.1.8",
+    "gatsby-plugin-sass": "^2.1.15",
     "gatsby-plugin-sharp": "^2.0.35",
-    "gatsby-plugin-typescript": "^2.0.13",
-    "gatsby-source-filesystem": "^2.0.32",
+    "gatsby-plugin-typescript": "^2.1.9",
+    "gatsby-source-filesystem": "^2.1.25",
     "gatsby-transformer-sharp": "^2.1.18",
     "hookedin-lib": "git+https://github.com/hookedin/hookedin-lib.git",
-    "node-sass": "^4.11.0",
-    "npm": "^6.9.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
+    "node-sass": "^4.12.0",
+    "npm": "^6.11.3",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
     "react-scrollspy": "^3.4.0",
-    "reactstrap": "^8.0.0"
+    "reactstrap": "^8.0.1"
   },
   "devDependencies": {
-    "@types/react": "^16.8.13",
-    "@types/reactstrap": "^8.0.0",
-    "typescript": "^3.4.3"
+    "@types/react": "^16.9.2",
+    "@types/reactstrap": "^8.0.4",
+    "typescript": "^3.6.3"
   }
 }
